--- a/index.html
+++ b/index.html
@@ -1,20 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>To-Do List App</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>SaaSify | Grow Your Business</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <div class="container">
-    <h1>To-Do List</h1>
-    <div class="input-section">
-      <input type="text" id="taskInput" placeholder="Add new task...">
-      <button id="addTaskBtn">Add</button>
+<body class="bg-gray-50 text-gray-800">
+
+  <!-- Header -->
+  <header class="bg-white shadow">
+    <div class="max-w-6xl mx-auto flex justify-between items-center py-4 px-6">
+      <h1 class="text-2xl font-bold text-blue-600">SaaSify</h1>
+      <nav>
+        <a href="#features" class="mx-4 text-gray-700 hover:text-blue-600">Features</a>
+        <a href="#signup" class="mx-4 text-gray-700 hover:text-blue-600">Sign Up</a>
+      </nav>
     </div>
-    <ul id="taskList"></ul>
-  </div>
-  <script src="script.js"></script>
+  </header>
+
+  <!-- Hero -->
+  <section class="text-center py-16 bg-blue-100">
+    <h2 class="text-4xl font-bold text-blue-700 mb-4">Scale Your SaaS with Ease</h2>
+    <p class="text-lg text-gray-600 mb-6">Grow your business with our all-in-one platform.</p>
+    <a href="#signup" class="px-6 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700">Start Free</a>
+  </section>
+
+  <!-- Features -->
+  <section id="features" class="max-w-6xl mx-auto py-12 grid grid-cols-1 md:grid-cols-3 gap-8 px-6">
+    <div class="bg-white p-6 rounded-lg shadow text-center">
+      <h3 class="text-xl font-semibold mb-2">Automation</h3>
+      <p>Streamline your workflow and save time.</p>
+    </div>
+    <div class="bg-white p-6 rounded-lg shadow text-center">
+      <h3 class="text-xl font-semibold mb-2">Analytics</h3>
+      <p>Gain insights and make data-driven decisions.</p>
+    </div>
+    <div class="bg-white p-6 rounded-lg shadow text-center">
+      <h3 class="text-xl font-semibold mb-2">Security</h3>
+      <p>Keep your data safe with top-notch security.</p>
+    </div>
+  </section>
+
+  <!-- Sign-Up -->
+  <section id="signup" class="bg-white py-12">
+    <div class="max-w-lg mx-auto text-center">
+      <h3 class="text-2xl font-bold mb-4">Sign Up Now</h3>
+      <form action="/signup" method="POST" class="bg-gray-50 p-6 rounded-lg shadow">
+        <input type="text" name="name" placeholder="Your Name" required class="w-full mb-4 px-4 py-2 border rounded">
+        <input type="email" name="email" placeholder="Email Address" required class="w-full mb-4 px-4 py-2 border rounded">
+        <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700">Sign Up</button>
+      </form>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="text-center py-6 bg-gray-200">
+    <p>&copy; 2025 SaaSify. All Rights Reserved.</p>
+  </footer>
 </body>
 </html>
